examples/nameresolution/conflictingimport.an
import Library.library_int, library_fn

library_int = 1

library_fn _ = 3

// args: -e ast-r examples/nameresolution/Library.an --no-color
// expected exit status: 1
// expected stdout:
// // id = c1m753_7873
// library_int_c1m753_7873_0 = 5
// 
// // id = c1m753_5383
// library_fn_c1m753_5383_0 __1 = 2
// 
// 
// import Library.library_int, library_fn
// 
// // id = c1m79_7873
// library_int_c1m79_7873_0 = 1
// 
// // id = c1m79_5383
// library_fn_c1m79_5383_0 __1 = 3

// expected stderr:
// examples/nameresolution/conflictingimport.an:1:8
// 1 | import Library.library_int, library_fn	// error: Could not find crate `Library`
//   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
// 
// Found 1 error and 0 warnings

